--- a/BookAppointment/Views/Shared/_Layout.cshtml
+++ b/BookAppointment/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Doctors" asp-action="BookAppointment">Book an appointment</a>
                         </li>
-                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doctors" asp-action="AllAppointment">All Appointment</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
